--- a/PrettyTunnel/Base.lproj/Main.storyboard
+++ b/PrettyTunnel/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -543,78 +542,124 @@
         <scene sceneID="5e5-Vd-oyF">
             <objects>
                 <navigationController id="FmL-jQ-uT6" userLabel="Help Navigation" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Help" image="Info" id="fkW-HO-IbR"/>
+                    <tabBarItem key="tabBarItem" title="About" image="Info" id="fkW-HO-IbR"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="YXd-L8-dRA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="ECQ-pj-gWc" kind="relationship" relationship="rootViewController" id="a0m-tu-WzM"/>
+                        <segue destination="Cfr-BE-H13" kind="relationship" relationship="rootViewController" id="ESh-of-Xom"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z4b-bj-vsz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-633" y="719"/>
         </scene>
-        <!--Guide Pages-->
-        <scene sceneID="fbA-dM-ta5">
+        <!--AboutVC-->
+        <scene sceneID="Ojg-4Z-b17">
             <objects>
-                <pageViewController storyboardIdentifier="GuideVC" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ECQ-pj-gWc" userLabel="Guide Pages" customClass="PTGuideVC" sceneMemberID="viewController">
-                    <extendedEdge key="edgesForExtendedLayout"/>
-                    <navigationItem key="navigationItem" title="Feature Guide" id="5Ke-JC-FQy"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </pageViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7eh-Bs-wXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-190" y="719"/>
-        </scene>
-        <!--GuidePage-->
-        <scene sceneID="B0O-Ql-Ruf">
-            <objects>
-                <viewController storyboardIdentifier="GuidePage" id="RqV-Pq-pux" userLabel="GuidePage" customClass="PTGuidePage" sceneMemberID="viewController">
+                <viewController id="Cfr-BE-H13" customClass="PTAboutVC" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="T9s-3b-2f3"/>
-                        <viewControllerLayoutGuide type="bottom" id="wDn-As-bdB"/>
+                        <viewControllerLayoutGuide type="top" id="Mtv-9b-Azf"/>
+                        <viewControllerLayoutGuide type="bottom" id="puD-9C-Q2V"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="3lZ-qO-AQJ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <view key="view" contentMode="scaleToFill" id="UtX-ek-1em">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nwm-Kp-hJK">
-                                <rect key="frame" x="0.0" y="124" width="320" height="320"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mmY-dX-isd">
+                                <rect key="frame" x="18" y="58" width="284" height="340"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="portrait.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RYQ-I7-8L6">
+                                        <rect key="frame" x="0.0" y="0.0" width="284" height="284"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="284" id="h5U-7I-gTe"/>
+                                            <constraint firstAttribute="height" constant="284" id="yDQ-Ny-CiD"/>
+                                        </constraints>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cwh-Kw-URB">
+                                        <rect key="frame" x="0.0" y="280" width="284" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8D-gl-6PT">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Version" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0C-1G-oK0">
+                                                <rect key="frame" x="0.0" y="19" width="50" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yf-8L-muE">
+                                                <rect key="frame" x="0.0" y="39" width="50" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aWO-Pb-IuA">
+                                                <rect key="frame" x="58" y="0.0" width="216" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <state key="normal" title="@twotreesx">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="onTwitter:" destination="Cfr-BE-H13" eventType="touchUpInside" id="Z5k-lb-2gZ"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1.2.996" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ly-6b-Ndz">
+                                                <rect key="frame" x="58" y="19" width="226" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eTh-ay-7Zo">
+                                                <rect key="frame" x="58" y="39" width="226" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <state key="normal" title="github.com/twotreeszf/prettytunnel">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="onGithub:" destination="Cfr-BE-H13" eventType="touchUpInside" id="ihy-bh-mGz"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="284" id="aKZ-DV-xJb"/>
+                                            <constraint firstAttribute="height" constant="60" id="hNF-gT-kGv"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="nwm-Kp-hJK" secondAttribute="height" multiplier="1:1" id="a43-hs-cs4"/>
-                                    <constraint firstAttribute="height" constant="320" id="hIY-LL-iS8"/>
-                                    <constraint firstAttribute="width" constant="320" id="yWE-2i-uuR"/>
+                                    <constraint firstAttribute="height" constant="340" id="CzA-I7-dxL"/>
+                                    <constraint firstAttribute="bottom" secondItem="cwh-Kw-URB" secondAttribute="bottom" id="FFj-bI-TdZ"/>
+                                    <constraint firstItem="RYQ-I7-8L6" firstAttribute="top" secondItem="mmY-dX-isd" secondAttribute="top" id="SZb-21-oFt"/>
+                                    <constraint firstAttribute="centerX" secondItem="RYQ-I7-8L6" secondAttribute="centerX" id="XOQ-KV-oAc"/>
+                                    <constraint firstAttribute="centerX" secondItem="cwh-Kw-URB" secondAttribute="centerX" id="iWE-Kz-da4"/>
+                                    <constraint firstAttribute="width" constant="284" id="oVV-6f-T8r"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="a43-hs-cs4"/>
-                                    </mask>
-                                </variation>
-                            </imageView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="nwm-Kp-hJK" secondAttribute="centerY" id="3M9-tZ-zn0"/>
-                            <constraint firstItem="nwm-Kp-hJK" firstAttribute="width" secondItem="3lZ-qO-AQJ" secondAttribute="width" id="OoI-MP-9KZ"/>
-                            <constraint firstAttribute="centerX" secondItem="nwm-Kp-hJK" secondAttribute="centerX" id="quk-WE-JIo"/>
+                            <constraint firstAttribute="centerY" secondItem="mmY-dX-isd" secondAttribute="centerY" id="HUb-8h-KrJ"/>
+                            <constraint firstAttribute="centerX" secondItem="mmY-dX-isd" secondAttribute="centerX" id="S7w-sQ-NAe"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="OoI-MP-9KZ"/>
-                            </mask>
-                        </variation>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="i8l-p5-2ar"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="guideImage" destination="nwm-Kp-hJK" id="oKW-h7-Sdt"/>
+                        <outlet property="appVersion" destination="9Ly-6b-Ndz" id="to0-CU-wQ4"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Y31-9S-Tnm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sfM-cy-EuM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="292" y="719"/>
+            <point key="canvasLocation" x="-199" y="719"/>
         </scene>
         <!--Settings Navigation-->
         <scene sceneID="Ufg-0X-0Lb">
@@ -639,5 +684,6 @@
         <image name="Home" width="32" height="32"/>
         <image name="Info" width="32" height="32"/>
         <image name="MainHeader" width="320" height="160"/>
+        <image name="portrait.jpg" width="568" height="568"/>
     </resources>
 </document>
